2003-10-08  Not Zed  <NotZed@Ximian.com>

	* mail-component.c (setup_local_folder): removed.
	(setup_local_store): setup various needed globals properly.
	(setup_account_storages): renamed to load_accounts.
	(go_online): turn on interactivity as well as onlinedness.

	* GNOME_Evolution_Mail.server.in.in: point the preferences pages
	to the right factory.

2003-10-07  Not Zed  <NotZed@Ximian.com>

	* mail-component.[ch]: Fix copyrights.

2003-10-02  Not Zed  <NotZed@Ximian.com>

	* mail-component.c (add_storage): Add the storage to the hash
	after we've initialised it.
	(mail_component_evomail_uri_from_folder): hardcode "local" account
	pseudo-id for local folders.
	(mail_component_get_folder_from_evomail_uri): handle the "local"
	account case.

2003-10-02  Not Zed  <NotZed@Ximian.com>

	* mail-component.c (setup_local_store): use mbox:/path rather than
	mbox:///path - the mbox code is 'wrong', but this is easier to
	fix.  fixes local unread counts.  maybe the provider url-compare
	should address this too.

2003-09-29  Ettore Perazzoli  <ettore@ximian.com>

	* mail-component.c: New member local_store in
	MailComponentPrivate.
	(impl_dispose): Unref.
	(mail_component_load_storage_by_uri): Return the CamelStore.
	(setup_local_folder): New.
	(setup_local_store): New.
	(mail_component_init): Call it.
	(mail_component_peek_storage_set): New.
	(mail_component_get_folder_from_evomail_uri): New.
	(mail_component_evomail_uri_from_folder): New.

	* em-folder-selection-button.c: New.
	* em-folder-selection-button.h: New.

	* em-folder-selection.c: New.
	* em-folder-selection.h: New.

	* em-marshal.list: Add NONE:POINTER.

2003-09-25  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-account-gui.c (mail_account_gui_save): Allow any file: uri
	to point to a sent or drafts folder.

2003-09-25  Rodney Dawes  <dobey@ximian.com>

	* mail-send-recv.c: Make the dialog more HIG-compliant by fixing
	widget alignment/spacing issues, and removing separators
